--- a/src/css/Edit.module.css
+++ b/src/css/Edit.module.css
@@ -1,17 +1,30 @@
 .background{
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
+    top: 52px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 52px);
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    z-index: 3;
 }
 
 .container{
     background-color: white;
-    height: 90vh;
+    width: 100%;
+    height: inherit;
+}
+
+.previous{
+    position: absolute;
+    height: 20px;
+    top: 15px;
+    left: 15px;
+    cursor: pointer;
+    z-index: 5;
+}
+
+.previous svg{
+    width: 20px;
+    height: 20px;
 }
